Remove the JDK 1.5 related profiles and settings from the build
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1348240 13f79535-47bb-0310-9956-ffa450edef68