@@ -221,54 +221,6 @@
         </plugins>
     </build>
     
-
-    <profiles>
-        <profile>
-            <id>jdk15</id>
-            <activation>
-                <jdk>1.5</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>create-endorsed-dir</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>xerces</groupId>
-                                            <artifactId>xercesImpl</artifactId>
-                                            <outputDirectory>${basedir}/target/endorsed</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>xml-apis</groupId>
-                                            <artifactId>xml-apis</artifactId>
-                                            <version>1.3.04</version>
-                                            <outputDirectory>${basedir}/target/endorsed</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>-Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
     <repositories>
         <repository>
             <id>oauth</id>
@@ -276,6 +228,4 @@
             <url>http://oauth.googlecode.com/svn/code/maven/</url>
         </repository>
     </repositories>
-    
-
 </project>
